# TransLoop

./: .gitignore  LICENSE  PRIVACY.md  README.md  RELEASE_NOTES_0.8.4.md  RELEASE_NOTES_0.9.0.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.2.md  SECURITY.md  capture.html  index.html  overlay.html  package.json  pnpm-lock.yaml  popup.html  release-assets.mjs  security-check.mjs  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: release-checklist-0.9.0.md  release-checklist-1.0.0.md  release-checklist-1.0.1.md
src/: App.tsx  CaptureView.tsx  HistoryPanel.tsx  HotkeyInput.tsx  OnboardingModal.tsx  OverlayView.tsx  PopupView.tsx  PrivacyModal.tsx  SettingsModal.tsx  UsagePanel.tsx  appInfo.ts  capture.tsx  diagnostics.ts  fileDownload.ts  history.ts  nativeTranslation.ts  overlay.tsx  popup.tsx  sanitize.ts  settingsTransfer.ts  store.ts  styles.css  translationCache.ts  translationRuntime.ts  updates.ts  usage.ts  userFacingError.ts  zip.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  ocr.rs  popup.rs  provider.rs  secure_store.rs  selection.rs  shortcut.rs  update.rs
src/providers/: claude.ts  deepseek.ts  gemini.ts  index.ts  openai-compat.ts  sse.ts  stubs.ts  types.ts
