[package]
name = "transloop"
version = "0.6.0"
description = "TransLoop · 划词翻译"
edition = "2021"
rust-version = "1.77"

[lib]
name = "transloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
enigo = "0.2"
anyhow = "1"
log = "0.4"
xcap = "0.9.6"
base64 = "0.22.1"
windows = { version = "0.62", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Globalization", "Foundation", "Foundation_Collections", "Win32_System_Com"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
