[package]
name = "transloop"
version = "1.0.2"
description = "TransLoop · 划词翻译"
edition = "2021"
rust-version = "1.77"

[lib]
name = "transloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"
enigo = "0.2"
anyhow = "1"
log = "0.4"
tempfile = "3"
xcap = "0.9.6"
base64 = "0.22.1"
windows = { version = "0.62", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Globalization", "Foundation", "Foundation_Collections", "Win32_System_Com", "Win32_Security_Cryptography", "Win32_System_Memory"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
zeroize = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
